# noa

./: CMakeLists.txt  DEPENDENCIES  Makefile  README.markdown  action.yml  vendorpull.mask
.github/workflows/: ci.yml  website-build.yml  website-deploy.yml
benchmark/linux/gcc/: data.js
benchmark/linux/llvm/: data.js
benchmark/macos/llvm/: data.js
benchmark/windows/msvc/: data.js
cmake/: noa.cmake
cmake/noa/: defaults.cmake  library.cmake  variables.cmake
cmake/noa/commands/: copy-file.cmake
cmake/noa/compiler/: options.cmake  sanitizer.cmake
cmake/noa/options/: enum.cmake
cmake/noa/targets/: clang-format.cmake
doxygen/: Doxyfile.in  index.markdown
test/flat_map/: CMakeLists.txt  flat_map_test.cc
test/hash/: CMakeLists.txt  hash_test.cc
test/packaging/find_package/: CMakeLists.txt  hello.cc
test/regex/: CMakeLists.txt  regex_matches_test.cc  regex_to_regex_test.cc
