cmake_minimum_required(VERSION 3.18)
project(noa_hello VERSION 0.0.1 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(Noa REQUIRED)
add_executable(noa_hello hello.cc)
target_link_libraries(noa_hello PRIVATE sourcemeta::noa::hash)
target_link_libraries(noa_hello PRIVATE sourcemeta::noa::flat_map)
